complete backend changes

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,12 @@
-MONGODB_URI="mongodb+srv://harsha:5hoaDUSgb09Y5Etz@cluster0.qjkqa.mongodb.net/ssi?retryWrites=true&w=majority"
+# Port number
+PORT=4000
+
+# Database Connection String
+DB_CONNECTION="mongodb+srv://harsha:5hoaDUSgb09Y5Etz@cluster0.qjkqa.mongodb.net/ssi?retryWrites=true&w=majority"
+
+
+# JSON Web Token Secret
+JWT_SECRET=YourSuperSecretKey
+
+# Payment gateway API key (if you use payment gateway in your app)
+PAYMENT_GATEWAY_API_KEY=YourPaymentGatewayApiKey
