user controller and jwt verify bug fixes

--- a/backend/.env
+++ b/backend/.env
@@ -1,12 +1,14 @@
 # Port number
-PORT=4000
+PORT=5000
 
 # Database Connection String
 DB_CONNECTION="mongodb+srv://harsha:5hoaDUSgb09Y5Etz@cluster0.qjkqa.mongodb.net/ssi?retryWrites=true&w=majority"
 
 
 # JSON Web Token Secret
-JWT_SECRET=YourSuperSecretKey
+JWT_SECRET="mysecretkey"
+
+
 
 # Payment gateway API key (if you use payment gateway in your app)
 PAYMENT_GATEWAY_API_KEY=YourPaymentGatewayApiKey
