--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
+    "react-qr-code": "^2.0.11",
     "react-redux": "^8.1.2",
     "react-router": "^6.14.2",
     "react-router-dom": "^6.14.2",
